--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "mongodb": "^5.5.0",
     "vue": "^3.2.13",
     "vue-router": "^4.2.0",
     "vuetify": "^3.2.2"
