--- a/package.json
+++ b/package.json
@@ -8,8 +8,26 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "assert": "^2.0.0",
+    "axios": "^1.4.0",
+    "browserify-zlib": "^0.2.0",
+    "buffer": "^6.0.3",
     "core-js": "^3.8.3",
+    "crypto-browserify": "^3.12.0",
+    "express": "^4.18.2",
     "mongodb": "^5.5.0",
+    "mongoose": "^7.1.2",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.3.2",
+    "net": "^1.0.2",
+    "os-browserify": "^0.3.0",
+    "process": "^0.11.10",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "timers-browserify": "^2.0.12",
+    "tls": "^0.0.1",
+    "url": "^0.11.0",
+    "util": "^0.12.5",
     "vue": "^3.2.13",
     "vue-router": "^4.2.0",
     "vuetify": "^3.2.2"
@@ -17,6 +35,7 @@
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@babel/plugin-proposal-private-methods": "^7.18.6",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
@@ -41,5 +60,10 @@
     "last 2 versions",
     "not dead",
     "not ie 11"
-  ]
+  ],
+  "description": "## Project setup ``` npm install ```",
+  "main": "babel.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
